# AutoMinecraft

./: .pre-commit-config.yaml  README.md  comp.sh  csdb.sh  pyproject.toml  window.py
mc/: comp.py  console.py  operations.py  window.py
