[tool.poetry]
name = "auto-mc"
version = "0.1.0"
description = "Automatic Minecraft"
authors = ["Mengdan <17638547327@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csdb = "mc.console:mc"
